@@ -4,7 +4,10 @@
 * Fix - Fixed capitalization for payment method names: iDEAL, giropay, and Sofort.
 * Add - Text to explain how to enable webhooks when manually entering your API keys in the new Stripe settings.
 * Tweak - Redirect to the settings tab after an account is connected
+* Tweak - Show toast when payment methods list is updated with new payment methods.
 * Fix - JS error on checkout when Boleto method was not active  
+
+=======
 
 = 5.9.0 - 2021-12-09 =
 * Add - Add Stripe API to generate connection tokens, manage terminal locations, create customers, get account summary, capture payment.
